add balloon, dom styling, and others

--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
             <p id="bmiResult"></p>
 
         </section>
+
+        <section>
+            <h1>Baloon Fetcher</h1>
+            <div id="baloons">
+                <div class="balloon" style="background-color: #4682b4;"></div>
+                <div class="balloon" style="background-color: #32cd32;"></div>
+                <div class="balloon" style="background-color: #ffa500;"></div>
+            </div>
+            <button id="fetchButton">Fetch a baloon</button>
+            <div id="fetched"></div>
+            <div id="error"></div>
+        </section>
     </main>
     <script src="src/dom-event.js"></script>
 </body>
